@@ -6,7 +6,6 @@ import net.thumbtack.hospital.dtorequest.admin.DoctorRegistrationDtoRequest;
 import net.thumbtack.hospital.dtorequest.patient.AppointmentToDoctorDtoRequest;
 import net.thumbtack.hospital.dtorequest.patient.EditPatientProfileDtoRequest;
 import net.thumbtack.hospital.dtorequest.patient.PatientRegistrationDtoRequest;
-import net.thumbtack.hospital.dtorequest.schedule.DtoRequestWithSchedule;
 import net.thumbtack.hospital.dtoresponse.admin.DoctorRegistrationDtoResponse;
 import net.thumbtack.hospital.dtoresponse.other.ErrorDtoResponse;
 import net.thumbtack.hospital.dtoresponse.other.ErrorsDtoResponse;
@@ -19,12 +18,11 @@ import net.thumbtack.hospital.util.cookie.CookieFactory;
 import net.thumbtack.hospital.util.error.DoctorNotFoundErrorCode;
 import net.thumbtack.hospital.util.error.ScheduleErrorCode;
 import net.thumbtack.hospital.util.ticket.TicketFactory;
-import org.apache.commons.lang3.tuple.Pair;
-import org.junit.Assert;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.http.MediaType;
-import org.springframework.test.context.junit4.SpringRunner;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
 
@@ -32,9 +30,11 @@ import javax.servlet.http.Cookie;
 import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
 import java.time.LocalTime;
-import java.util.*;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
 
-@RunWith(SpringRunner.class)
+@ExtendWith(SpringExtension.class)
 public class PatientMockedControllerTest extends MockedControllerTestApi {
     @Test
     public void patientRegistrationTest() throws Exception {
@@ -43,27 +43,27 @@ public class PatientMockedControllerTest extends MockedControllerTestApi {
                 "camikaf920@mijumail.com", "617823, г. Усмань, ул. Гаккелевская, дом 153, квартира 346", "+7 (922) 656-58-24",
                 "PahonPetrov927", "ugSfPaGD1YBv");
 
-        final Pair<String, PatientRegistrationDtoResponse> patientRegistrationData = patientRegistration(patientRegistrationRequest);
+        final var patientRegistrationData = patientRegistration(patientRegistrationRequest);
 
         {
-            final PatientRegistrationDtoResponse actualResponse = patientRegistrationData.getValue();
-            final PatientRegistrationDtoResponse expectedResponse = new PatientRegistrationDtoResponse(actualResponse.getId(),
+            final var actualResponse = patientRegistrationData.getValue();
+            final var expectedResponse = new PatientRegistrationDtoResponse(actualResponse.getId(),
                     patientRegistrationRequest.getFirstName(), patientRegistrationRequest.getLastName(), patientRegistrationRequest.getPatronymic(),
                     patientRegistrationRequest.getEmail(), patientRegistrationRequest.getAddress(), patientRegistrationRequest.getPhone());
 
-            Assert.assertEquals(expectedResponse, actualResponse);
+            Assertions.assertEquals(expectedResponse, actualResponse);
         }
 
-        final String patientSessionId = patientRegistrationData.getKey();
+        final var patientSessionId = patientRegistrationData.getKey();
 
         {
-            final FullPatientInformationDtoResponse actualResponse = getUserInformation(patientSessionId, FullPatientInformationDtoResponse.class);
-            final FullPatientInformationDtoResponse expectedResponse = new FullPatientInformationDtoResponse(actualResponse.getId(),
+            final var actualResponse = getUserInformation(patientSessionId, FullPatientInformationDtoResponse.class);
+            final var expectedResponse = new FullPatientInformationDtoResponse(actualResponse.getId(),
                     patientRegistrationRequest.getLogin(), patientRegistrationRequest.getPassword(),
                     patientRegistrationRequest.getFirstName(), patientRegistrationRequest.getLastName(), patientRegistrationRequest.getPatronymic(),
                     patientRegistrationRequest.getEmail(), patientRegistrationRequest.getAddress(), patientRegistrationRequest.getPhone());
 
-            Assert.assertEquals(expectedResponse, actualResponse);
+            Assertions.assertEquals(expectedResponse, actualResponse);
         }
 
         logout(patientSessionId);
@@ -71,58 +71,57 @@ public class PatientMockedControllerTest extends MockedControllerTestApi {
 
     @Test
     public void editPatientProfileTest() throws Exception {
-        final PatientRegistrationDtoRequest patientRegistrationRequest = new PatientRegistrationDtoRequest(
-                "Пахон", "Петров",
+        final var patientRegistrationRequest = new PatientRegistrationDtoRequest("Пахон", "Петров",
                 "camikaf920@mijumail.com", "617823, г. Усмань, ул. Гаккелевская, дом 153, квартира 346", "+7 (922) 656-58-24",
                 "PahonPetrov927", "ugSfPaGD1YBv");
 
-        final Pair<String, PatientRegistrationDtoResponse> patientRegistrationData = patientRegistration(patientRegistrationRequest);
+        final var patientRegistrationData = patientRegistration(patientRegistrationRequest);
 
         {
-            final PatientRegistrationDtoResponse actualResponse = patientRegistrationData.getValue();
-            final PatientRegistrationDtoResponse expectedResponse = new PatientRegistrationDtoResponse(actualResponse.getId(),
+            final var actualResponse = patientRegistrationData.getValue();
+            final var expectedResponse = new PatientRegistrationDtoResponse(actualResponse.getId(),
                     patientRegistrationRequest.getFirstName(), patientRegistrationRequest.getLastName(), patientRegistrationRequest.getPatronymic(),
                     patientRegistrationRequest.getEmail(), patientRegistrationRequest.getAddress(), patientRegistrationRequest.getPhone());
 
-            Assert.assertEquals(expectedResponse, actualResponse);
+            Assertions.assertEquals(expectedResponse, actualResponse);
         }
 
-        final String patientSessionId = patientRegistrationData.getKey();
+        final var patientSessionId = patientRegistrationData.getKey();
 
         {
-            final FullPatientInformationDtoResponse actualResponse = getUserInformation(patientSessionId, FullPatientInformationDtoResponse.class);
-            final FullPatientInformationDtoResponse expectedResponse = new FullPatientInformationDtoResponse(actualResponse.getId(),
+            final var actualResponse = getUserInformation(patientSessionId, FullPatientInformationDtoResponse.class);
+            final var expectedResponse = new FullPatientInformationDtoResponse(actualResponse.getId(),
                     patientRegistrationRequest.getLogin(), patientRegistrationRequest.getPassword(),
                     patientRegistrationRequest.getFirstName(), patientRegistrationRequest.getLastName(), patientRegistrationRequest.getPatronymic(),
                     patientRegistrationRequest.getEmail(), patientRegistrationRequest.getAddress(), patientRegistrationRequest.getPhone());
 
-            Assert.assertEquals(expectedResponse, actualResponse);
+            Assertions.assertEquals(expectedResponse, actualResponse);
         }
 
 
-        final EditPatientProfileDtoRequest editPatientProfileRequest = new EditPatientProfileDtoRequest(
+        final var editPatientProfileRequest = new EditPatientProfileDtoRequest(
                 "Арифе", "Репин", "Вадимович",
                 "camikaf920@mijumail.com", "433832, г. Карагай, ул. Сходненский проезд, дом 18, квартира 592", "8922) 790-31-77",
                 patientRegistrationRequest.getPassword(), null);
 
         {
-            final EditPatientProfileDtoResponse actualResponse = editPatientProfile(patientSessionId, editPatientProfileRequest);
-            final EditPatientProfileDtoResponse expectedResponse = new EditPatientProfileDtoResponse(
+            final var actualResponse = editPatientProfile(patientSessionId, editPatientProfileRequest);
+            final var expectedResponse = new EditPatientProfileDtoResponse(
                     editPatientProfileRequest.getFirstName(), editPatientProfileRequest.getLastName(), editPatientProfileRequest.getPatronymic(),
                     editPatientProfileRequest.getEmail(), editPatientProfileRequest.getAddress(), actualResponse.getPhone(),
                     editPatientProfileRequest.getOldPassword());
 
-            Assert.assertEquals(expectedResponse, actualResponse);
+            Assertions.assertEquals(expectedResponse, actualResponse);
         }
 
         {
-            final FullPatientInformationDtoResponse actualResponse = getUserInformation(patientSessionId, FullPatientInformationDtoResponse.class);
-            final FullPatientInformationDtoResponse expectedResponse = new FullPatientInformationDtoResponse(actualResponse.getId(),
+            final var actualResponse = getUserInformation(patientSessionId, FullPatientInformationDtoResponse.class);
+            final var expectedResponse = new FullPatientInformationDtoResponse(actualResponse.getId(),
                     patientRegistrationRequest.getLogin(), editPatientProfileRequest.getOldPassword(),
                     editPatientProfileRequest.getFirstName(), editPatientProfileRequest.getLastName(), editPatientProfileRequest.getPatronymic(),
                     editPatientProfileRequest.getEmail(), editPatientProfileRequest.getAddress(), editPatientProfileRequest.getPhone());
 
-            Assert.assertEquals(expectedResponse, actualResponse);
+            Assertions.assertEquals(expectedResponse, actualResponse);
         }
 
 
@@ -133,187 +132,186 @@ public class PatientMockedControllerTest extends MockedControllerTestApi {
     public void appointmentToDoctorTest() throws Exception {
         final String rootAdminSessionId = loginRootAdmin();
 
-        final int duration = 15;
-        final LocalDate dateStart = LocalDate.of(2020, 3, 1);
-        final LocalDate dateEnd = LocalDate.of(2020, 3, 31);
-        final LocalTime timeStart = LocalTime.of(8, 0);
-        final LocalTime timeEnd = LocalTime.of(17, 0);
-        final List<Integer> weekDays = Arrays.asList(1, 2, 3);
+        final var duration = 15;
+        final var dateStart = LocalDate.of(2020, 3, 1);
+        final var dateEnd = LocalDate.of(2020, 3, 31);
+        final var timeStart = LocalTime.of(8, 0);
+        final var timeEnd = LocalTime.of(17, 0);
+        final var weekDays = List.of(1, 2, 3);
 
-        final DtoRequestWithSchedule generatedWeekSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(
+        final var generatedWeekSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(
                 duration, dateStart, dateEnd, timeStart, timeEnd, weekDays);
 
-        final DoctorRegistrationDtoRequest doctorRegistrationRequest = new DoctorRegistrationDtoRequest(
+        final var doctorRegistrationRequest = new DoctorRegistrationDtoRequest(
                 generatedWeekSchedule.getDateStart(), generatedWeekSchedule.getDateEnd(), generatedWeekSchedule.getDuration(),
                 generatedWeekSchedule.getWeekSchedule(),
                 "Саркис", "Семёнов", "Вениаминович",
                 "Surgeon", "205", "SarkisSemenov585", "xjNE6QK6d3b9");
-        final DoctorRegistrationDtoResponse actualDoctorRegistrationResponse = doctorRegistration(rootAdminSessionId, doctorRegistrationRequest);
-        final DoctorRegistrationDtoResponse expectedDoctorRegistrationResponse = new DoctorRegistrationDtoResponse(actualDoctorRegistrationResponse.getId(),
+        final var actualDoctorRegistrationResponse = doctorRegistration(rootAdminSessionId, doctorRegistrationRequest);
+        final var expectedDoctorRegistrationResponse = new DoctorRegistrationDtoResponse(actualDoctorRegistrationResponse.getId(),
                 doctorRegistrationRequest.getFirstName(), doctorRegistrationRequest.getLastName(), doctorRegistrationRequest.getPatronymic(),
                 doctorRegistrationRequest.getSpeciality(), doctorRegistrationRequest.getRoom(), actualDoctorRegistrationResponse.getSchedule());
-        Assert.assertEquals(expectedDoctorRegistrationResponse, actualDoctorRegistrationResponse);
+        Assertions.assertEquals(expectedDoctorRegistrationResponse, actualDoctorRegistrationResponse);
 
         logout(rootAdminSessionId);
 
-        final PatientRegistrationDtoRequest patientRegistrationRequest = new PatientRegistrationDtoRequest(
+        final var patientRegistrationRequest = new PatientRegistrationDtoRequest(
                 "Пахон", "Петров",
                 "camikaf920@mijumail.com", "617823, г. Усмань, ул. Гаккелевская, дом 153, квартира 346", "+7 (922) 656-58-24",
                 "PahonPetrov927", "ugSfPaGD1YBv");
 
-        final Pair<String, PatientRegistrationDtoResponse> patientRegistrationData = patientRegistration(patientRegistrationRequest);
+        final var patientRegistrationData = patientRegistration(patientRegistrationRequest);
 
         {
-            final PatientRegistrationDtoResponse actualResponse = patientRegistrationData.getValue();
-            final PatientRegistrationDtoResponse expectedResponse = new PatientRegistrationDtoResponse(actualResponse.getId(),
+            final var actualResponse = patientRegistrationData.getValue();
+            final var expectedResponse = new PatientRegistrationDtoResponse(actualResponse.getId(),
                     patientRegistrationRequest.getFirstName(), patientRegistrationRequest.getLastName(), patientRegistrationRequest.getPatronymic(),
                     patientRegistrationRequest.getEmail(), patientRegistrationRequest.getAddress(), patientRegistrationRequest.getPhone());
 
-            Assert.assertEquals(expectedResponse, actualResponse);
+            Assertions.assertEquals(expectedResponse, actualResponse);
         }
 
-        final String patientSessionId = patientRegistrationData.getKey();
+        final var patientSessionId = patientRegistrationData.getKey();
 
-        final LocalDate appointmentDate = LocalDate.of(2020, 3, 17);
-        final LocalTime appointmentTime = LocalTime.of(10, 15);
-        final AppointmentToDoctorDtoRequest appointmentToDoctorRequest = new AppointmentToDoctorDtoRequest(
+        final var appointmentDate = LocalDate.of(2020, 3, 17);
+        final var appointmentTime = LocalTime.of(10, 15);
+        final var appointmentToDoctorRequest = new AppointmentToDoctorDtoRequest(
                 expectedDoctorRegistrationResponse.getId(), appointmentDate.toString(), appointmentTime.toString());
 
-        final String expectedTicket = TicketFactory.buildTicketToDoctor(appointmentToDoctorRequest.getDoctorId(), appointmentDate, appointmentTime);
-        final AppointmentToDoctorDtoResponse expectedResponse = new AppointmentToDoctorDtoResponse(
+        final var expectedTicket = TicketFactory.buildTicketToDoctor(appointmentToDoctorRequest.getDoctorId(), appointmentDate, appointmentTime);
+        final var expectedResponse = new AppointmentToDoctorDtoResponse(
                 expectedTicket, appointmentToDoctorRequest.getDoctorId(),
                 expectedDoctorRegistrationResponse.getFirstName(), expectedDoctorRegistrationResponse.getLastName(), expectedDoctorRegistrationResponse.getPatronymic(),
                 expectedDoctorRegistrationResponse.getSpeciality(), expectedDoctorRegistrationResponse.getRoom(), appointmentDate.toString(), appointmentTime.toString());
-        final AppointmentToDoctorDtoResponse actualResponse = appointmentToDoctor(patientSessionId, appointmentToDoctorRequest);
+        final var actualResponse = appointmentToDoctor(patientSessionId, appointmentToDoctorRequest);
 
-        Assert.assertEquals(expectedResponse, actualResponse);
+        Assertions.assertEquals(expectedResponse, actualResponse);
     }
 
     @Test
     public void denyAppointmentToDoctorTest() throws Exception {
-        final String rootAdminSessionId = loginRootAdmin();
+        final var rootAdminSessionId = loginRootAdmin();
 
-        int duration = 15;
-        LocalDate dateStart = LocalDate.of(2020, 3, 1);
-        LocalDate dateEnd = LocalDate.of(2020, 3, 31);
-        LocalTime timeStart = LocalTime.of(8, 0);
-        LocalTime timeEnd = LocalTime.of(17, 0);
-        List<Integer> weekDays = Arrays.asList(1, 2, 3);
+        final var duration = 15;
+        final var dateStart = LocalDate.of(2020, 3, 1);
+        final var dateEnd = LocalDate.of(2020, 3, 31);
+        final var timeStart = LocalTime.of(8, 0);
+        final var timeEnd = LocalTime.of(17, 0);
+        final var weekDays = List.of(1, 2, 3);
 
-        final DtoRequestWithSchedule generatedWeekSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(
+        final var generatedWeekSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(
                 duration, dateStart, dateEnd, timeStart, timeEnd, weekDays);
 
-        final DoctorRegistrationDtoRequest doctorRegistrationRequest = new DoctorRegistrationDtoRequest(
+        final var doctorRegistrationRequest = new DoctorRegistrationDtoRequest(
                 generatedWeekSchedule.getDateStart(), generatedWeekSchedule.getDateEnd(), generatedWeekSchedule.getDuration(),
                 generatedWeekSchedule.getWeekSchedule(),
                 "Саркис", "Семёнов", "Вениаминович",
                 "Surgeon", "205", "SarkisSemenov585", "xjNE6QK6d3b9");
-        final DoctorRegistrationDtoResponse actualDoctorRegistrationResponse = doctorRegistration(rootAdminSessionId, doctorRegistrationRequest);
-        final DoctorRegistrationDtoResponse expectedDoctorRegistrationResponse = new DoctorRegistrationDtoResponse(actualDoctorRegistrationResponse.getId(),
+        final var actualDoctorRegistrationResponse = doctorRegistration(rootAdminSessionId, doctorRegistrationRequest);
+        final var expectedDoctorRegistrationResponse = new DoctorRegistrationDtoResponse(actualDoctorRegistrationResponse.getId(),
                 doctorRegistrationRequest.getFirstName(), doctorRegistrationRequest.getLastName(), doctorRegistrationRequest.getPatronymic(),
                 doctorRegistrationRequest.getSpeciality(), doctorRegistrationRequest.getRoom(), actualDoctorRegistrationResponse.getSchedule());
-        Assert.assertEquals(expectedDoctorRegistrationResponse, actualDoctorRegistrationResponse);
+        Assertions.assertEquals(expectedDoctorRegistrationResponse, actualDoctorRegistrationResponse);
 
         logout(rootAdminSessionId);
 
-        final PatientRegistrationDtoRequest patientRegistrationRequest =
-                new PatientRegistrationDtoRequest("Пахон", "Петров",
-                        "camikaf920@mijumail.com", "617823, г. Усмань, ул. Гаккелевская, дом 153, квартира 346", "+7 (922) 656-58-24",
-                        "PahonPetrov927", "ugSfPaGD1YBv");
+        final var patientRegistrationRequest = new PatientRegistrationDtoRequest("Пахон", "Петров",
+                "camikaf920@mijumail.com", "617823, г. Усмань, ул. Гаккелевская, дом 153, квартира 346", "+7 (922) 656-58-24",
+                "PahonPetrov927", "ugSfPaGD1YBv");
 
-        final Pair<String, PatientRegistrationDtoResponse> patientRegistrationData = patientRegistration(patientRegistrationRequest);
+        final var patientRegistrationData = patientRegistration(patientRegistrationRequest);
 
         {
-            final PatientRegistrationDtoResponse actualResponse = patientRegistrationData.getValue();
-            final PatientRegistrationDtoResponse expectedResponse = new PatientRegistrationDtoResponse(actualResponse.getId(),
+            final var actualResponse = patientRegistrationData.getValue();
+            final var expectedResponse = new PatientRegistrationDtoResponse(actualResponse.getId(),
                     patientRegistrationRequest.getFirstName(), patientRegistrationRequest.getLastName(), patientRegistrationRequest.getPatronymic(),
                     patientRegistrationRequest.getEmail(), patientRegistrationRequest.getAddress(), patientRegistrationRequest.getPhone());
 
-            Assert.assertEquals(expectedResponse, actualResponse);
+            Assertions.assertEquals(expectedResponse, actualResponse);
         }
 
-        final String patientSessionId = patientRegistrationData.getKey();
+        final var patientSessionId = patientRegistrationData.getKey();
 
-        final LocalDate appointmentDate = LocalDate.of(2020, 3, 17);
-        final LocalTime appointmentTime = LocalTime.of(10, 15);
-        final AppointmentToDoctorDtoRequest appointmentToDoctorRequest = new AppointmentToDoctorDtoRequest(
+        final var appointmentDate = LocalDate.of(2020, 3, 17);
+        final var appointmentTime = LocalTime.of(10, 15);
+        final var appointmentToDoctorRequest = new AppointmentToDoctorDtoRequest(
                 expectedDoctorRegistrationResponse.getId(), appointmentDate.toString(), appointmentTime.toString());
 
-        final String expectedTicket = TicketFactory.buildTicketToDoctor(appointmentToDoctorRequest.getDoctorId(), appointmentDate, appointmentTime);
-        final AppointmentToDoctorDtoResponse expectedResponse = new AppointmentToDoctorDtoResponse(
+        final var expectedTicket = TicketFactory.buildTicketToDoctor(appointmentToDoctorRequest.getDoctorId(), appointmentDate, appointmentTime);
+        final var expectedResponse = new AppointmentToDoctorDtoResponse(
                 expectedTicket, appointmentToDoctorRequest.getDoctorId(),
                 expectedDoctorRegistrationResponse.getFirstName(), expectedDoctorRegistrationResponse.getLastName(), expectedDoctorRegistrationResponse.getPatronymic(),
                 expectedDoctorRegistrationResponse.getSpeciality(), expectedDoctorRegistrationResponse.getRoom(), appointmentDate.toString(), appointmentTime.toString());
 
-        final AppointmentToDoctorDtoResponse actualResponse = appointmentToDoctor(patientSessionId, appointmentToDoctorRequest);
-        Assert.assertEquals(expectedResponse, actualResponse);
+        final var actualResponse = appointmentToDoctor(patientSessionId, appointmentToDoctorRequest);
+        Assertions.assertEquals(expectedResponse, actualResponse);
 
         denyTicketToDoctor(patientSessionId, expectedTicket);
     }
 
     @Test
     public void appointmentToDoctorTwoTimesTest() throws Exception {
-        String rootAdminSessionId = loginRootAdmin();
+        final var rootAdminSessionId = loginRootAdmin();
 
-        final int duration = 15;
-        final LocalDate dateStart = LocalDate.of(2020, 3, 1);
-        final LocalDate dateEnd = LocalDate.of(2020, 3, 31);
-        final LocalTime timeStart = LocalTime.of(8, 0);
-        final LocalTime timeEnd = LocalTime.of(17, 0);
-        final List<Integer> weekDays = Arrays.asList(1, 2, 3);
+        final var duration = 15;
+        final var dateStart = LocalDate.of(2020, 3, 1);
+        final var dateEnd = LocalDate.of(2020, 3, 31);
+        final var timeStart = LocalTime.of(8, 0);
+        final var timeEnd = LocalTime.of(17, 0);
+        final var weekDays = List.of(1, 2, 3);
 
-        final DtoRequestWithSchedule generatedWeekSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(
+        final var generatedWeekSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(
                 duration, dateStart, dateEnd, timeStart, timeEnd, weekDays);
 
-        final DoctorRegistrationDtoRequest doctorRegistrationRequest = new DoctorRegistrationDtoRequest(
+        final var doctorRegistrationRequest = new DoctorRegistrationDtoRequest(
                 generatedWeekSchedule.getDateStart(), generatedWeekSchedule.getDateEnd(), generatedWeekSchedule.getDuration(),
                 generatedWeekSchedule.getWeekSchedule(),
                 "Саркис", "Семёнов", "Вениаминович",
                 "Surgeon", "205", "SarkisSemenov585", "xjNE6QK6d3b9");
-        final DoctorRegistrationDtoResponse actualDoctorRegistrationResponse = doctorRegistration(rootAdminSessionId, doctorRegistrationRequest);
-        final DoctorRegistrationDtoResponse expectedDoctorRegistrationResponse = new DoctorRegistrationDtoResponse(actualDoctorRegistrationResponse.getId(),
+        final var actualDoctorRegistrationResponse = doctorRegistration(rootAdminSessionId, doctorRegistrationRequest);
+        final var expectedDoctorRegistrationResponse = new DoctorRegistrationDtoResponse(actualDoctorRegistrationResponse.getId(),
                 doctorRegistrationRequest.getFirstName(), doctorRegistrationRequest.getLastName(), doctorRegistrationRequest.getPatronymic(),
                 doctorRegistrationRequest.getSpeciality(), doctorRegistrationRequest.getRoom(), actualDoctorRegistrationResponse.getSchedule());
-        Assert.assertEquals(expectedDoctorRegistrationResponse, actualDoctorRegistrationResponse);
+        Assertions.assertEquals(expectedDoctorRegistrationResponse, actualDoctorRegistrationResponse);
 
         logout(rootAdminSessionId);
 
-        final PatientRegistrationDtoRequest patientRegistrationRequest = new PatientRegistrationDtoRequest(
+        final var patientRegistrationRequest = new PatientRegistrationDtoRequest(
                 "Пахон", "Петров",
                 "camikaf920@mijumail.com", "617823, г. Усмань, ул. Гаккелевская, дом 153, квартира 346", "+7 (922) 656-58-24",
                 "PahonPetrov927", "ugSfPaGD1YBv");
 
-        final Pair<String, PatientRegistrationDtoResponse> patientRegistrationData = patientRegistration(patientRegistrationRequest);
+        final var patientRegistrationData = patientRegistration(patientRegistrationRequest);
 
         {
-            final PatientRegistrationDtoResponse actualResponse = patientRegistrationData.getValue();
-            final PatientRegistrationDtoResponse expectedResponse = new PatientRegistrationDtoResponse(actualResponse.getId(),
+            final var actualResponse = patientRegistrationData.getValue();
+            final var expectedResponse = new PatientRegistrationDtoResponse(actualResponse.getId(),
                     patientRegistrationRequest.getFirstName(), patientRegistrationRequest.getLastName(), patientRegistrationRequest.getPatronymic(),
                     patientRegistrationRequest.getEmail(), patientRegistrationRequest.getAddress(), patientRegistrationRequest.getPhone());
 
-            Assert.assertEquals(expectedResponse, actualResponse);
+            Assertions.assertEquals(expectedResponse, actualResponse);
         }
 
-        final String patientSessionId = patientRegistrationData.getKey();
+        final var patientSessionId = patientRegistrationData.getKey();
 
-        final LocalDate appointmentDate = LocalDate.of(2020, 3, 17);
-        final LocalTime appointmentTime = LocalTime.of(10, 15);
-        final AppointmentToDoctorDtoRequest appointmentToDoctorRequest = new AppointmentToDoctorDtoRequest(
+        final var appointmentDate = LocalDate.of(2020, 3, 17);
+        final var appointmentTime = LocalTime.of(10, 15);
+        final var appointmentToDoctorRequest = new AppointmentToDoctorDtoRequest(
                 expectedDoctorRegistrationResponse.getId(), appointmentDate.toString(), appointmentTime.toString());
 
-        final String expectedTicket = TicketFactory.buildTicketToDoctor(appointmentToDoctorRequest.getDoctorId(), appointmentDate, appointmentTime);
-        final AppointmentToDoctorDtoResponse expectedResponse = new AppointmentToDoctorDtoResponse(
+        final var expectedTicket = TicketFactory.buildTicketToDoctor(appointmentToDoctorRequest.getDoctorId(), appointmentDate, appointmentTime);
+        final var expectedResponse = new AppointmentToDoctorDtoResponse(
                 expectedTicket, appointmentToDoctorRequest.getDoctorId(),
                 expectedDoctorRegistrationResponse.getFirstName(), expectedDoctorRegistrationResponse.getLastName(), expectedDoctorRegistrationResponse.getPatronymic(),
                 expectedDoctorRegistrationResponse.getSpeciality(), expectedDoctorRegistrationResponse.getRoom(), appointmentDate.toString(), appointmentTime.toString());
 
-        final AppointmentToDoctorDtoResponse actualResponse = appointmentToDoctor(patientSessionId, appointmentToDoctorRequest);
-        Assert.assertEquals(expectedResponse, actualResponse);
+        final var actualResponse = appointmentToDoctor(patientSessionId, appointmentToDoctorRequest);
+        Assertions.assertEquals(expectedResponse, actualResponse);
 
-        final String url = buildUrl(PatientController.PREFIX_URL, PatientController.APPOINTMENT_TO_DOCTOR_URL);
-        final String json = mapToJson(appointmentToDoctorRequest);
+        final var url = buildUrl(PatientController.PREFIX_URL, PatientController.APPOINTMENT_TO_DOCTOR_URL);
+        final var json = mapToJson(appointmentToDoctorRequest);
 
-        final String actualJsonResponse = mvc.perform(
+        final var actualJsonResponse = mvc.perform(
                 MockMvcRequestBuilders
                         .patch(url)
                         .cookie(new Cookie(CookieFactory.JAVA_SESSION_ID, patientSessionId))
@@ -322,43 +320,43 @@ public class PatientMockedControllerTest extends MockedControllerTestApi {
                 .andExpect(MockMvcResultMatchers.status().isBadRequest())
                 .andExpect(MockMvcResultMatchers.content().contentType(MediaType.APPLICATION_JSON_VALUE))
                 .andReturn().getResponse().getContentAsString(StandardCharsets.UTF_8);
-        Assert.assertFalse(actualJsonResponse.isEmpty());
+        Assertions.assertFalse(actualJsonResponse.isEmpty());
 
-        final ErrorsDtoResponse actualErrorsDtoResponse = mapFromJson(actualJsonResponse, ErrorsDtoResponse.class);
-        final ErrorsDtoResponse expectedErrorsDtoResponse = new ErrorsDtoResponse(Collections.singletonList(
+        final var actualErrorsDtoResponse = mapFromJson(actualJsonResponse, ErrorsDtoResponse.class);
+        final var expectedErrorsDtoResponse = new ErrorsDtoResponse(Collections.singletonList(
                 new ErrorDtoResponse(ScheduleErrorCode.ALREADY_CONTAINS_APPOINTMENT.getErrorCode(), "date and time", ScheduleErrorCode.ALREADY_CONTAINS_APPOINTMENT.getErrorMessage())));
-        Assert.assertEquals(expectedErrorsDtoResponse, actualErrorsDtoResponse);
+        Assertions.assertEquals(expectedErrorsDtoResponse, actualErrorsDtoResponse);
     }
 
     @Test
     public void appointmentToDoctorBySpecialityTest1() throws Exception {
-        final PatientRegistrationDtoRequest patientRegistrationRequest = new PatientRegistrationDtoRequest(
+        final var patientRegistrationRequest = new PatientRegistrationDtoRequest(
                 "Пахон", "Петров",
                 "camikaf920@mijumail.com", "617823, г. Усмань, ул. Гаккелевская, дом 153, квартира 346", "+7 (922) 656-58-24",
                 "PahonPetrov927", "ugSfPaGD1YBv");
 
-        final Pair<String, PatientRegistrationDtoResponse> patientRegistrationData = patientRegistration(patientRegistrationRequest);
+        final var patientRegistrationData = patientRegistration(patientRegistrationRequest);
 
         {
-            final PatientRegistrationDtoResponse actualResponse = patientRegistrationData.getValue();
-            final PatientRegistrationDtoResponse expectedResponse = new PatientRegistrationDtoResponse(actualResponse.getId(),
+            final var actualResponse = patientRegistrationData.getValue();
+            final var expectedResponse = new PatientRegistrationDtoResponse(actualResponse.getId(),
                     patientRegistrationRequest.getFirstName(), patientRegistrationRequest.getLastName(), patientRegistrationRequest.getPatronymic(),
                     patientRegistrationRequest.getEmail(), patientRegistrationRequest.getAddress(), patientRegistrationRequest.getPhone());
 
-            Assert.assertEquals(expectedResponse, actualResponse);
+            Assertions.assertEquals(expectedResponse, actualResponse);
         }
 
-        final String patientSessionId = patientRegistrationData.getKey();
+        final var patientSessionId = patientRegistrationData.getKey();
 
-        final LocalDate appointmentDate = LocalDate.of(2020, 3, 17);
-        final LocalTime appointmentTime = LocalTime.of(10, 15);
+        final var appointmentDate = LocalDate.of(2020, 3, 17);
+        final var appointmentTime = LocalTime.of(10, 15);
         final AppointmentToDoctorDtoRequest appointmentToDoctorRequest = new AppointmentToDoctorDtoRequest(
                 "Dentist", appointmentDate.toString(), appointmentTime.toString());
 
-        final String url = buildUrl(PatientController.PREFIX_URL, PatientController.APPOINTMENT_TO_DOCTOR_URL);
-        final String json = mapToJson(appointmentToDoctorRequest);
+        final var url = buildUrl(PatientController.PREFIX_URL, PatientController.APPOINTMENT_TO_DOCTOR_URL);
+        final var json = mapToJson(appointmentToDoctorRequest);
 
-        final String actualJsonResponse = mvc.perform(
+        final var actualJsonResponse = mvc.perform(
                 MockMvcRequestBuilders
                         .patch(url)
                         .cookie(new Cookie(CookieFactory.JAVA_SESSION_ID, patientSessionId))
@@ -367,167 +365,164 @@ public class PatientMockedControllerTest extends MockedControllerTestApi {
                 .andExpect(MockMvcResultMatchers.status().isBadRequest())
                 .andExpect(MockMvcResultMatchers.content().contentType(MediaType.APPLICATION_JSON_VALUE))
                 .andReturn().getResponse().getContentAsString(StandardCharsets.UTF_8);
-        Assert.assertFalse(actualJsonResponse.isEmpty());
+        Assertions.assertFalse(actualJsonResponse.isEmpty());
 
-        final ErrorsDtoResponse actualErrorsDtoResponse = mapFromJson(actualJsonResponse, ErrorsDtoResponse.class);
-        final ErrorsDtoResponse expectedErrorsDtoResponse = new ErrorsDtoResponse(Collections.singletonList(
+        final var actualErrorsDtoResponse = mapFromJson(actualJsonResponse, ErrorsDtoResponse.class);
+        final var expectedErrorsDtoResponse = new ErrorsDtoResponse(Collections.singletonList(
                 new ErrorDtoResponse(DoctorNotFoundErrorCode.DOCTOR_NOT_FOUND.getErrorCode(), "id or speciality", DoctorNotFoundErrorCode.DOCTOR_NOT_FOUND.getErrorMessage())));
-        Assert.assertEquals(expectedErrorsDtoResponse, actualErrorsDtoResponse);
+        Assertions.assertEquals(expectedErrorsDtoResponse, actualErrorsDtoResponse);
     }
 
     @Test
     public void appointmentToDoctorBySpecialityTest2() throws Exception {
-        final String rootAdminSessionId = loginRootAdmin();
+        final var rootAdminSessionId = loginRootAdmin();
 
-        final int duration = 15;
-        final LocalDate dateStart = LocalDate.of(2020, 3, 1);
-        final LocalDate dateEnd = LocalDate.of(2020, 3, 31);
-        final LocalTime timeStart = LocalTime.of(8, 0);
-        final LocalTime timeEnd = LocalTime.of(17, 0);
-        final List<Integer> weekDays = Arrays.asList(1, 2, 3);
+        final var duration = 15;
+        final var dateStart = LocalDate.of(2020, 3, 1);
+        final var dateEnd = LocalDate.of(2020, 3, 31);
+        final var timeStart = LocalTime.of(8, 0);
+        final var timeEnd = LocalTime.of(17, 0);
+        final var weekDays = List.of(1, 2, 3);
 
-        final DtoRequestWithSchedule generatedWeekSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(
+        final var generatedWeekSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(
                 duration, dateStart, dateEnd, timeStart, timeEnd, weekDays);
 
-        final DoctorRegistrationDtoRequest doctorRegistrationRequest =
+        final var doctorRegistrationRequest =
                 new DoctorRegistrationDtoRequest(generatedWeekSchedule.getDateStart(), generatedWeekSchedule.getDateEnd(), generatedWeekSchedule.getDuration(),
                         generatedWeekSchedule.getWeekSchedule(),
                         "Саркис", "Семёнов", "Вениаминович",
                         "Surgeon", "205", "SarkisSemenov585", "xjNE6QK6d3b9");
-        final DoctorRegistrationDtoResponse actualDoctorRegistrationResponse = doctorRegistration(rootAdminSessionId, doctorRegistrationRequest);
-        final DoctorRegistrationDtoResponse expectedDoctorRegistrationResponse = new DoctorRegistrationDtoResponse(actualDoctorRegistrationResponse.getId(),
+        final var actualDoctorRegistrationResponse = doctorRegistration(rootAdminSessionId, doctorRegistrationRequest);
+        final var expectedDoctorRegistrationResponse = new DoctorRegistrationDtoResponse(actualDoctorRegistrationResponse.getId(),
                 doctorRegistrationRequest.getFirstName(), doctorRegistrationRequest.getLastName(), doctorRegistrationRequest.getPatronymic(),
                 doctorRegistrationRequest.getSpeciality(), doctorRegistrationRequest.getRoom(), actualDoctorRegistrationResponse.getSchedule());
-        Assert.assertEquals(expectedDoctorRegistrationResponse, actualDoctorRegistrationResponse);
+        Assertions.assertEquals(expectedDoctorRegistrationResponse, actualDoctorRegistrationResponse);
 
         logout(rootAdminSessionId);
 
-        final PatientRegistrationDtoRequest patientRegistrationRequest =
+        final var patientRegistrationRequest =
                 new PatientRegistrationDtoRequest("Пахон", "Петров",
                         "camikaf920@mijumail.com", "617823, г. Усмань, ул. Гаккелевская, дом 153, квартира 346", "+7 (922) 656-58-24",
                         "PahonPetrov927", "ugSfPaGD1YBv");
 
-        final Pair<String, PatientRegistrationDtoResponse> patientRegistrationData = patientRegistration(patientRegistrationRequest);
+        final var patientRegistrationData = patientRegistration(patientRegistrationRequest);
 
         {
-            final PatientRegistrationDtoResponse actualResponse = patientRegistrationData.getValue();
-            final PatientRegistrationDtoResponse expectedResponse = new PatientRegistrationDtoResponse(actualResponse.getId(),
+            final var actualResponse = patientRegistrationData.getValue();
+            final var expectedResponse = new PatientRegistrationDtoResponse(actualResponse.getId(),
                     patientRegistrationRequest.getFirstName(), patientRegistrationRequest.getLastName(), patientRegistrationRequest.getPatronymic(),
                     patientRegistrationRequest.getEmail(), patientRegistrationRequest.getAddress(), patientRegistrationRequest.getPhone());
 
-            Assert.assertEquals(expectedResponse, actualResponse);
+            Assertions.assertEquals(expectedResponse, actualResponse);
         }
 
-        final String patientSessionId = patientRegistrationData.getKey();
+        final var patientSessionId = patientRegistrationData.getKey();
 
-        final LocalDate appointmentDate = LocalDate.of(2020, 3, 17);
-        final LocalTime appointmentTime = LocalTime.of(10, 15);
+        final var appointmentDate = LocalDate.of(2020, 3, 17);
+        final var appointmentTime = LocalTime.of(10, 15);
         final AppointmentToDoctorDtoRequest appointmentToDoctorRequest = new AppointmentToDoctorDtoRequest(
                 expectedDoctorRegistrationResponse.getSpeciality(), appointmentDate.toString(), appointmentTime.toString());
 
-        final String expectedTicket = TicketFactory.buildTicketToDoctor(expectedDoctorRegistrationResponse.getId(), appointmentDate, appointmentTime);
-        final AppointmentToDoctorDtoResponse expectedResponse = new AppointmentToDoctorDtoResponse(
+        final var expectedTicket = TicketFactory.buildTicketToDoctor(expectedDoctorRegistrationResponse.getId(), appointmentDate, appointmentTime);
+        final var expectedResponse = new AppointmentToDoctorDtoResponse(
                 expectedTicket, expectedDoctorRegistrationResponse.getId(),
                 expectedDoctorRegistrationResponse.getFirstName(), expectedDoctorRegistrationResponse.getLastName(), expectedDoctorRegistrationResponse.getPatronymic(),
                 expectedDoctorRegistrationResponse.getSpeciality(), expectedDoctorRegistrationResponse.getRoom(), appointmentDate.toString(), appointmentTime.toString());
-        final AppointmentToDoctorDtoResponse actualResponse = appointmentToDoctor(patientSessionId, appointmentToDoctorRequest);
+        final var actualResponse = appointmentToDoctor(patientSessionId, appointmentToDoctorRequest);
 
-        Assert.assertEquals(expectedResponse, actualResponse);
+        Assertions.assertEquals(expectedResponse, actualResponse);
     }
 
     @Test
     public void appointmentToDoctorBySpecialityTest3() throws Exception {
-        final String rootAdminSessionId = loginRootAdmin();
+        final var rootAdminSessionId = loginRootAdmin();
 
-        final int duration = 15;
-        final LocalDate dateStart = LocalDate.of(2020, 3, 1);
-        final LocalDate dateEnd = LocalDate.of(2020, 3, 31);
-        final LocalTime timeStart = LocalTime.of(8, 0);
-        final LocalTime timeEnd = LocalTime.of(17, 0);
-        final List<Integer> weekDays = Arrays.asList(1, 2, 3);
-        final String speciality = "Surgeon";
-        final Map<Integer, DoctorRegistrationDtoResponse> responses = new HashMap<>();
+        final var duration = 15;
+        final var dateStart = LocalDate.of(2020, 3, 1);
+        final var dateEnd = LocalDate.of(2020, 3, 31);
+        final var timeStart = LocalTime.of(8, 0);
+        final var timeEnd = LocalTime.of(17, 0);
+        final var weekDays = List.of(1, 2, 3);
+        final var speciality = "Surgeon";
+        final var responses = new HashMap<Integer, DoctorRegistrationDtoResponse>();
 
-        final DtoRequestWithSchedule generatedWeekSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(
+        final var generatedWeekSchedule = ScheduleGenerators.generateDtoRequestWithWeekSchedule(
                 duration, dateStart, dateEnd, timeStart, timeEnd, weekDays);
 
         {
-            final DoctorRegistrationDtoRequest doctorRegistrationRequest = new DoctorRegistrationDtoRequest(
+            final var doctorRegistrationRequest = new DoctorRegistrationDtoRequest(
                     generatedWeekSchedule.getDateStart(), generatedWeekSchedule.getDateEnd(), generatedWeekSchedule.getDuration(),
                     generatedWeekSchedule.getWeekSchedule(),
                     "Саркис", "Семёнов", "Вениаминович",
                     speciality, "205", "SarkisSemenov585", "xjNE6QK6d3b9");
-            final DoctorRegistrationDtoResponse actualDoctorRegistrationResponse = doctorRegistration(rootAdminSessionId, doctorRegistrationRequest);
-            final DoctorRegistrationDtoResponse expectedDoctorRegistrationResponse = new DoctorRegistrationDtoResponse(actualDoctorRegistrationResponse.getId(),
+            final var actualDoctorRegistrationResponse = doctorRegistration(rootAdminSessionId, doctorRegistrationRequest);
+            final var expectedDoctorRegistrationResponse = new DoctorRegistrationDtoResponse(actualDoctorRegistrationResponse.getId(),
                     doctorRegistrationRequest.getFirstName(), doctorRegistrationRequest.getLastName(), doctorRegistrationRequest.getPatronymic(),
                     doctorRegistrationRequest.getSpeciality(), doctorRegistrationRequest.getRoom(), actualDoctorRegistrationResponse.getSchedule());
-            Assert.assertEquals(expectedDoctorRegistrationResponse, actualDoctorRegistrationResponse);
+            Assertions.assertEquals(expectedDoctorRegistrationResponse, actualDoctorRegistrationResponse);
             responses.put(expectedDoctorRegistrationResponse.getId(), expectedDoctorRegistrationResponse);
         }
 
         {
-            final DoctorRegistrationDtoRequest doctorRegistrationRequest = new DoctorRegistrationDtoRequest(
+            final var doctorRegistrationRequest = new DoctorRegistrationDtoRequest(
                     generatedWeekSchedule.getDateStart(), generatedWeekSchedule.getDateEnd(), generatedWeekSchedule.getDuration(),
                     generatedWeekSchedule.getWeekDaysSchedule(),
                     "Аксырга", "Прокофьева", "Леонидовна",
                     speciality, "306", "AksyrgaProkofeva993", "TiW0wvq2HNaB");
-            final DoctorRegistrationDtoResponse actualDoctorRegistrationResponse = doctorRegistration(rootAdminSessionId, doctorRegistrationRequest);
-            final DoctorRegistrationDtoResponse expectedDoctorRegistrationResponse = new DoctorRegistrationDtoResponse(actualDoctorRegistrationResponse.getId(),
+            final var actualDoctorRegistrationResponse = doctorRegistration(rootAdminSessionId, doctorRegistrationRequest);
+            final var expectedDoctorRegistrationResponse = new DoctorRegistrationDtoResponse(actualDoctorRegistrationResponse.getId(),
                     doctorRegistrationRequest.getFirstName(), doctorRegistrationRequest.getLastName(), doctorRegistrationRequest.getPatronymic(),
                     doctorRegistrationRequest.getSpeciality(), doctorRegistrationRequest.getRoom(), actualDoctorRegistrationResponse.getSchedule());
-            Assert.assertEquals(expectedDoctorRegistrationResponse, actualDoctorRegistrationResponse);
+            Assertions.assertEquals(expectedDoctorRegistrationResponse, actualDoctorRegistrationResponse);
             responses.put(expectedDoctorRegistrationResponse.getId(), expectedDoctorRegistrationResponse);
         }
 
         {
-            final DoctorRegistrationDtoRequest doctorRegistrationRequest = new DoctorRegistrationDtoRequest(
+            final var doctorRegistrationRequest = new DoctorRegistrationDtoRequest(
                     generatedWeekSchedule.getDateStart(), generatedWeekSchedule.getDateEnd(), generatedWeekSchedule.getDuration(),
                     generatedWeekSchedule.getWeekDaysSchedule(),
                     "Чилина", "Царева", "Ермаковна",
                     speciality, "261", "ChilinaTsareva849", "9LZfrHND9Nrq");
-            final DoctorRegistrationDtoResponse actualDoctorRegistrationResponse = doctorRegistration(rootAdminSessionId, doctorRegistrationRequest);
-            final DoctorRegistrationDtoResponse expectedDoctorRegistrationResponse = new DoctorRegistrationDtoResponse(actualDoctorRegistrationResponse.getId(),
+            final var actualDoctorRegistrationResponse = doctorRegistration(rootAdminSessionId, doctorRegistrationRequest);
+            final var expectedDoctorRegistrationResponse = new DoctorRegistrationDtoResponse(actualDoctorRegistrationResponse.getId(),
                     doctorRegistrationRequest.getFirstName(), doctorRegistrationRequest.getLastName(), doctorRegistrationRequest.getPatronymic(),
                     doctorRegistrationRequest.getSpeciality(), doctorRegistrationRequest.getRoom(), actualDoctorRegistrationResponse.getSchedule());
-            Assert.assertEquals(expectedDoctorRegistrationResponse, actualDoctorRegistrationResponse);
+            Assertions.assertEquals(expectedDoctorRegistrationResponse, actualDoctorRegistrationResponse);
             responses.put(expectedDoctorRegistrationResponse.getId(), expectedDoctorRegistrationResponse);
         }
 
         logout(rootAdminSessionId);
 
+        final var patientRegistrationRequest = new PatientRegistrationDtoRequest("Пахон", "Петров",
+                "camikaf920@mijumail.com", "617823, г. Усмань, ул. Гаккелевская, дом 153, квартира 346", "+7 (922) 656-58-24",
+                "PahonPetrov927", "ugSfPaGD1YBv");
 
-        final PatientRegistrationDtoRequest patientRegistrationRequest =
-                new PatientRegistrationDtoRequest("Пахон", "Петров",
-                        "camikaf920@mijumail.com", "617823, г. Усмань, ул. Гаккелевская, дом 153, квартира 346", "+7 (922) 656-58-24",
-                        "PahonPetrov927", "ugSfPaGD1YBv");
-
-        final Pair<String, PatientRegistrationDtoResponse> patientRegistrationData = patientRegistration(patientRegistrationRequest);
+        final var patientRegistrationData = patientRegistration(patientRegistrationRequest);
 
         {
-            final PatientRegistrationDtoResponse actualResponse = patientRegistrationData.getValue();
-            final PatientRegistrationDtoResponse expectedResponse = new PatientRegistrationDtoResponse(actualResponse.getId(),
+            final var actualResponse = patientRegistrationData.getValue();
+            final var expectedResponse = new PatientRegistrationDtoResponse(actualResponse.getId(),
                     patientRegistrationRequest.getFirstName(), patientRegistrationRequest.getLastName(), patientRegistrationRequest.getPatronymic(),
                     patientRegistrationRequest.getEmail(), patientRegistrationRequest.getAddress(), patientRegistrationRequest.getPhone());
 
-            Assert.assertEquals(expectedResponse, actualResponse);
+            Assertions.assertEquals(expectedResponse, actualResponse);
         }
 
-        final String patientSessionId = patientRegistrationData.getKey();
+        final var patientSessionId = patientRegistrationData.getKey();
 
-        final LocalDate appointmentDate = LocalDate.of(2020, 3, 17);
-        final LocalTime appointmentTime = LocalTime.of(10, 15);
-        final AppointmentToDoctorDtoRequest appointmentToDoctorRequest = new AppointmentToDoctorDtoRequest(speciality, appointmentDate.toString(), appointmentTime.toString());
+        final var appointmentDate = LocalDate.of(2020, 3, 17);
+        final var appointmentTime = LocalTime.of(10, 15);
+        final var appointmentToDoctorRequest = new AppointmentToDoctorDtoRequest(speciality, appointmentDate.toString(), appointmentTime.toString());
 
-        final AppointmentToDoctorDtoResponse actualResponse = appointmentToDoctor(patientSessionId, appointmentToDoctorRequest);
-        final DoctorRegistrationDtoResponse docResponse = responses.get(actualResponse.getDoctorId());
+        final var actualResponse = appointmentToDoctor(patientSessionId, appointmentToDoctorRequest);
+        final var docResponse = responses.get(actualResponse.getDoctorId());
 
-        final String expectedTicket = TicketFactory.buildTicketToDoctor(docResponse.getId(), appointmentDate, appointmentTime);
-        final AppointmentToDoctorDtoResponse expectedResponse = new AppointmentToDoctorDtoResponse(
-                expectedTicket, docResponse.getId(),
+        final var expectedTicket = TicketFactory.buildTicketToDoctor(docResponse.getId(), appointmentDate, appointmentTime);
+        final var expectedResponse = new AppointmentToDoctorDtoResponse(expectedTicket, docResponse.getId(),
                 docResponse.getFirstName(), docResponse.getLastName(), docResponse.getPatronymic(),
                 docResponse.getSpeciality(), docResponse.getRoom(), appointmentDate.toString(), appointmentTime.toString()
         );
 
-        Assert.assertEquals(expectedResponse, actualResponse);
+        Assertions.assertEquals(expectedResponse, actualResponse);
     }
 }
